--- a/.env.prod
+++ b/.env.prod
@@ -2,6 +2,7 @@ ENV=production
 DEBUG=false
 FRONTEND_URL=http://localhost
 BACKEND_URL=http://localhost:5000
+BACKEND_HOST=backend-prod
 DB_HOST=db-prod
 DB_PORT=5432
 DB_NAME=luhn_db
