--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -20,7 +20,7 @@ http {
     }
 
     location /validate {
-      proxy_pass http://backend-pre:5000/validate;
+      proxy_pass http://${BACKEND_HOST}:5000/validate;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
