--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,3 +9,11 @@ services:
       - "80:80"
     env_file:
       - .env.prod
+    networks:
+      - luhn-net-prod
+    depends_on:
+      - backend-prod 
+
+networks:
+  luhn-net-prod:
+    external: true
