--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,9 +9,20 @@ services:
       - "80:80"
     env_file:
       - .env.prod
+    environment:
+      # Define BACKEND_HOST para que envsubst lo reemplace
+      - BACKEND_HOST=backend-prod
+    volumes:
+      # Monta la plantilla y la expone de solo lectura
+      - ./nginx.conf.template:/etc/nginx/nginx.conf.template:ro
+    command: >
+      /bin/sh -c "
+      envsubst '\$BACKEND_HOST' < /etc/nginx/nginx.conf.template \
+        > /etc/nginx/nginx.conf &&
+      nginx -g 'daemon off;'
+      "
     networks:
       - luhn-net-prod
-
 
 networks:
   luhn-net-prod:
