--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,17 +10,9 @@ services:
     env_file:
       - .env.prod
     environment:
-      # Define BACKEND_HOST para que envsubst lo reemplace
-      - BACKEND_HOST=backend-prod
-    volumes:
-      # Monta la plantilla y la expone de solo lectura
-      - ./nginx.conf.template:/etc/nginx/nginx.conf.template:ro
-    command: >
-      /bin/sh -c "
-      envsubst '\$BACKEND_HOST' < /etc/nginx/nginx.conf.template \
-        > /etc/nginx/nginx.conf &&
-      nginx -g 'daemon off;'
-      "
+      - BACKEND_HOST=backend
+    # Se quita el `volumes:` porque no hace falta montar nada
+    # Se respeta el CMD del Dockerfile que ya hace envsubst
     networks:
       - luhn-net-prod
 
