--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,9 +10,7 @@ services:
     env_file:
       - .env.prod
     environment:
-      - BACKEND_HOST=backend
-    # Se quita el `volumes:` porque no hace falta montar nada
-    # Se respeta el CMD del Dockerfile que ya hace envsubst
+      - BACKEND_HOST=backend-prod
     networks:
       - luhn-net-prod
 
